# candy-shop

./: .env.example  .gitattributes  .gitignore  README.md  VERCEL_DEPLOY.md  auto-test.cjs  index.html  marketing.md  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.ts
docs/: web3-skills-marketplace-evaluation.md
public/: coi-fixed.js  coi-serviceworker.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/auth/: AuthCallback.tsx  AuthModal.tsx
src/components/common/: CartDrawer.tsx  DocsModal.tsx  SkillModal.tsx  Terminal.tsx
src/components/debug-loop/: DebugLoopConfig.tsx  DebugLoopMonitor.tsx
src/components/home/: Categories.tsx  ExternalResources.tsx  FAQ.tsx  Hero.tsx  SkillsGrid.tsx  SocialProof.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/contexts/: LanguageContext.tsx  VersionModeContext.tsx
src/data/: cravingsData.ts  skillsData.ts
src/hooks/: useFileUpload.ts  useSkillAnalysis.ts
src/lib/: agent.ts  api-client.ts  opencode-client.ts  skills.ts  supabaseClient.ts  webcontainer.ts
src/pages/: SkillCreationPage.tsx  SkillCreatorPage.tsx
src/types/: auto-debug.ts  skill-creator.ts  workflow.ts
src/utils/: aiFixGenerator.ts  autoDeployer.ts  candy.ts  debugLoopOrchestrator.ts  error-handling.ts  file-validation.ts  remoteMonitor.ts  storage.ts  workflowConverter.ts  workflowExecutor.ts
(+13 files in other folders)
